--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
             <br>consórcio. O processo foi conduzido  
             <br>com muito brilhantismo e profissionalismo  
             <br>pela Srta Jordana, que demonstrou extrema  
-            <br>amabilidade, paciência e principalmente conhecimento  
-            <br>técnico e 100% de comprometimento em  
-            <br>nos auxiliar e conduzir ao êxito  
-            <br>a concretização deste negócio. Ficamos eu  
-            <br>e minha esposa encantados com atendimento.  
+            <br>amabilidade, paciência e principalmente  
+            <br>conhecimento técnico e 100% de  
+            <br>comprometimento em nos auxiliar e conduzir   
+            <br>ao êxito a concretização deste negócio.   
+            <br>Ficamos eu e minha esposa encantados
+            <br> com atendimento.  
             <br>Gostaríamos de agradecer e recomendar a Remax.  
             <br>Aqui vai também nosso agradecimento à Lucia,  
             <br>espetacular corretora que nos assessorou. Enfim,  
@@ -202,15 +203,16 @@
             <br>com a equipe Martins & Troccoli da  
             <br>RE/MAX Viva de Atibaia (SP): uma  
             <br>em 2022 e agora em 2023.  
-            <br>Assinei contrato de exclusividade nos dois  
-            <br>momentos e tive todo apoio para  
-            <br>realizar a venda dos dois imóveis.  
+            <br>Assinei contrato de exclusividade  
+            <br>nos dois momentos e tive todo apoio
+            <br>para realizar a venda dos dois imóveis.
             <br>Desde o estudo de mercado e avaliação  
             <br>do imóvel, produção de fotos e vídeo,  
-            <br>relatórios sobre estratégias de marketing, feedback das  
-            <br>visitas e a venda dos imóveis. Se  
-            <br>procura profissionalismo, atendimento personalizado e concretização  
-            <br>de negócio, RE/MAX Viva é a imobiliária  
+            <br>relatórios sobre estratégias de marketing,
+            <br>feedback das   visitas e a venda dos imóveis.
+            <br>Se procura profissionalismo, atendimento  
+            <br>personalizado e concretização de negócio,
+            <br>RE/MAX Viva é a imobiliária  
             <br>para quem procura imóveis em Atibaia(SP).  
             <br>Recomendo e recomendarei, sempre!
           </p>
