--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="sobre-remax-viva" class="sobre-section" aria-labelledby="sobre-title">
     <div class="sobre-container">
       <header class="sobre-header">
-        <h2 id="sobre-title">RE/MAX VIVA I — Atibaia, SP</h2>
+        <h2 id="sobre-title">RE/MAX VIVA — Atibaia, SP</h2>
         <p class="tagline">CI nº 35692-J | CRECI nº 35692 · 🏅 20 anos em Atibaia</p>
         <p class="chamada">Estamos de casa nova! Conheça a <strong>NOVA SEDE</strong>.</p>
       </header>
