--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="card reveal">
           <h3>Quem somos</h3>
           <p>
-            A RE/MAX VIVA I atua no mercado imobiliário de Atibaia e região desde 2011,
+            A RE/MAX VIVA atua no mercado imobiliário de Atibaia e região desde 2011,
             oferecendo atendimento especializado em venda, locação e administração
             de imóveis residenciais, terrenos, condomínios e empreendimentos comerciais.
           </p>
