--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>RE/MAX VIVA I & II Atibaia | Especialista em Venda e Locação de Casas, Apartamentos e Imóveis Comerciais</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="avaliacoes.css">
   <link rel="stylesheet" href="button.css">
   <link rel="stylesheet" href="contato.css">
+  <link rel="stylesheet" href="depoimentos.css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="localizacao.css">
   <link rel="stylesheet" href="nav.css">
@@ -124,119 +124,71 @@
     </div>
   </section>
 
-  <!-- Avaliações -->
-  <section id="avaliacoes" class="avaliacoes-section">
-    <h2>O que estão falando sobre a RE/MAX VIVA ATIBAIA?</h2>
-    <div class="carousel-container" style="text-align: left;">
-      <button class="carousel-btn prev">&#10094;</button>
-      <div class="carousel-track">
-        <div class="card">
-          <h4>Fabricio</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Pessoal é super profissional, fui atendido  
-            <br>pelos corretores Iara e Jean, ótimos  
-            <br>e muito gentis. A parte Adm  
-            <br>da Remax também é excelente, muito  
-            <br>organizada e seguem todos os ritos  
-            <br>necessários para dar segurança e garantir  
-            <br>uma boa negociação para ambas partes.  
-            <br>Jordana muito competente e ágil nas  
-            <br>demandas. Fiquei muito satisfeito e faria  
-            <br>negócios mais vezes.
-          </p>
-        </div>
-        <div class="card">
-          <h4>Claudio</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Finalizamos recentemente compra de imóvel,  
-            <br>parte do pagamento via carta de  
-            <br>consórcio. O processo foi conduzido  
-            <br>com muito brilhantismo e profissionalismo  
-            <br>pela Srta Jordana, que demonstrou extrema  
-            <br>amabilidade, paciência e principalmente  
-            <br>conhecimento técnico e 100% de  
-            <br>comprometimento em nos auxiliar e conduzir   
-            <br>ao êxito a concretização deste negócio.   
-            <br>Ficamos eu e minha esposa encantados
-            <br> com atendimento.  
-            <br>Gostaríamos de agradecer e recomendar a Remax.  
-            <br>Aqui vai também nosso agradecimento à Lucia,  
-            <br>espetacular corretora que nos assessorou. Enfim,  
-            <br>REMAX, eu recomendo!
-          </p>
-        </div>
-        <div class="card">
-          <h4>Rodrigo</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Imobiliária Excelente!!! Realizei compra e venda  
-            <br>de imóveis com as corretoras Carolina  
-            <br>Sandoval e Lúcia Mazoline e só  
-            <br>tenho a agradecer pelo perfeito atendimento.  
-            <br>Além de serem ótimas pessoas, são  
-            <br>excelentes profissionais! Recomendo sem dúvidas  
-            <br>a Imobiliaria Remax!
-          </p>
-        </div>
-        <div class="card">
-          <h4>Sylvia</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Imobiliária muito confiável e profissionais ágeis  
-            <br>e dispostos a ajudar, sempre dando  
-            <br>feedback sobre anúncios, visitas e detalhes  
-            <br>do trabalho que desenvolvem com transparência.  
-            <br>Agradecimento especial aos corretores Ulisses  
-            <br>e Maira que não mediram esforços  
-            <br>para que a venda fosse realizada  
-            <br>em apenas 45 dias, sempre gentis  
-            <br>e disponíveis para ajudar.
-          </p>
-        </div>
-        <div class="card">
-          <h4>Careimi</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Já tive 2 experiências muito positivas  
-            <br>com a equipe Martins & Troccoli da  
-            <br>RE/MAX Viva de Atibaia (SP): uma  
-            <br>em 2022 e agora em 2023.  
-            <br>Assinei contrato de exclusividade  
-            <br>nos dois momentos e tive todo apoio
-            <br>para realizar a venda dos dois imóveis.
-            <br>Desde o estudo de mercado e avaliação  
-            <br>do imóvel, produção de fotos e vídeo,  
-            <br>relatórios sobre estratégias de marketing,
-            <br>feedback das   visitas e a venda dos imóveis.
-            <br>Se procura profissionalismo, atendimento  
-            <br>personalizado e concretização de negócio,
-            <br>RE/MAX Viva é a imobiliária  
-            <br>para quem procura imóveis em Atibaia(SP).  
-            <br>Recomendo e recomendarei, sempre!
-          </p>
-        </div>
-        <div class="card">
-          <h4>Maurício</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Agradecemos a todos pelo ótimo serviço  
-            <br>prestado, bem como gentileza e assessoria  
-            <br>especializada durante todo processo.
-          </p>
-        </div>
-        <div class="card">
-          <h4>Marli</h4>
-          <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <p>
-            Adoramos fazer negócio com a REMAX,  
-            <br>as corretoras Lúcia e Carol são  
-            <br>atenciosas e maravilhosas. Recomendo.
-          </p>
+  <!-- Seção Prova Social e Credibilidade -->
+  <section id="depoimentos" class="depoimentos">
+    <div class="depoimentos-container">
+      <h2>O que estão falando da RE/MAX VIVA - Atibaia?</h2>
+      <p class="intro">
+        Nossos resultados falam por si!
+      </p>
+
+      <!-- Carrossel -->
+      <div class="carousel">
+        <div class="carousel-track">
+
+          <div class="card">
+            <h4>Fabricio Serafim</h4>
+            <p>⭐⭐⭐⭐⭐
+            <br>"Pessoal é super profissional, fui atendido pelos corretores Iara e Jean, ótimos e muito gentis. A parte Adm da Remax também é excelente, muito organizada e seguem todos os ritos necessários para dar segurança e garantir uma boa negociação para ambas partes. Jordana muito competente e ágil nas demandas. Fiquei muito satisfeito e faria negócios mais vezes."</p>
+            <a href="https://maps.app.goo.gl/HAgtLrNydP9SLvJY7" target="_blank" rel="noopener noreferrer">
+              Abrir avaliação no Google Maps
+            </a>
+          </div>
+
+          <div class="card">
+            <h4>Claudio Ragaini</h4>
+            <p>⭐⭐⭐⭐⭐
+            <br>"Finalizamos recentemente compra de imóvel, tendo parte do pagamento sendo efetivado através de carta de consórcio. O processo foi conduzido com muito brilhantismo e profissionalismo pela Srta Jordana, que demosntrou extrema amabilidade, paciência e principlamente conhecimento técnico e 100% de comprometimento em nos auxiliar e conduzir ao êxito a concretização deste negócio. Ficamos, eu e minha esposa encantados com o atendimento da Jordana e gostaríamos de agradecer e recomendar a Remax pelos excelentes profissionais que compoem seu quadro. Aqui vai também nosso agradecimento à Lucia, espetacular Corretora que também nos acessorou. Enfim, REMAX, eu recomendo!"</p>
+            <a href="https://maps.app.goo.gl/u8adHJJxxqT8AWJ16" target="_blank" rel="noopener noreferrer">
+              Abrir avaliação no Google Maps
+            </a>
+          </div>
+
+          <div class="card">
+            <h4>Rodrigo Maffessoni</h4>
+            <p>⭐⭐⭐⭐⭐
+            <br>"Imobiliária Excelente!!! Realizei Compra e Venda de imóveis com as Corretoras Carolina Sandoval e Lúcia Mazoline e só tenho à agradecer pelo perfeito atendimento. Além de serem ótimas pessoas, são excelentes profissionais! Recomendo sem dúvidas a Imobiliaria Remax!"</p>
+            <a href="https://maps.app.goo.gl/jFr7p7S3L8Vd96P9A" target="_blank" rel="noopener noreferrer">
+              Abrir avaliação no Google Maps
+            </a>
+          </div>
+
+          <div class="card">
+            <h4>Sylvia Christina</h4>
+            <p>⭐⭐⭐⭐⭐
+            <br>"Imobiliária muito confiável e profissionais ágeis e dispostos a ajudar, sempre dando feedback a respeito de anúncios, visitas e todos os detalhes do trabalho que desenvolvem com muita transparência. Um agradecimento muito especial aos corretores Ulisses e Maira que não mediram esforços para que a venda fosse realizada em apenas 45 dias, sempre gentis e disponíveis para ajudar."</p>
+            <a href="https://maps.app.goo.gl/WT2VEAe6t2YuuWJDA" target="_blank" rel="noopener noreferrer">
+              Abrir avaliação no Google Maps
+            </a>
+          </div>
+
+          <div class="card">
+            <h4>Careimi Ludwig</h4>
+            <p>⭐⭐⭐⭐⭐
+            <br>"Já tive 2 experiências muito positivas com a equipe Martins & Troccoli da RE/MAX Viva de Atibaia (SP): uma em 2022 e agora em 2023. Assinei contrato de exclusividade nos dois momentos e tive todo o apoio para realizar a venda dos dois imóveis. Desde o estudo de mercado e avaliação do imóvel e seu preço, produção de fotos e vídeo, relatórios sobre estratégias de marketing,  feedback das visitas e a venda dos imóveis. Se procura profissionalismo, atendimento personalizado e concretização de negócio, RE/MAX Viva é a imobiliária para quem procura imóveis em Atibaia(SP). Recomendo e recomendarei, sempre!"</p>
+            <a href="https://maps.app.goo.gl/516cZwbbcoaQVUbBA" target="_blank" rel="noopener noreferrer">
+              Abrir avaliação no Google Maps
+            </a>
+          </div>
+
         </div>
       </div>
-      <button class="carousel-btn next">&#10095;</button>
+
+      <!-- CTA -->
+      <a href="https://api.whatsapp.com/send?phone=551126718848&text=Ol%C3%A1,%20venho%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." 
+        target="_blank" class="cta-button">
+        Fale com um Corretor, agora mesmo!
+      </a>
     </div>
   </section>
 
@@ -269,8 +221,6 @@
             width="100%" height="220" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
-
-      <a href="#contato" class="cta-button">Fale com um Corretor!</a>
     </div>
   </section>
 
@@ -353,8 +303,8 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp">
   </a>
 
-  <script src="avaliacoes.js"></script>
   <script src="contato.js"></script>
+  <script src="depoimentos.js"></script>
   <script src="home.js"></script>
   <script src="nav.js"></script>
   <script src="sobre.js"></script>
