--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <title>RE/MAX VIVA I & II Atibaia | Especialista em Venda e Locação de Casas, Apartamentos e Imóveis Comerciais</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="button.css">
-  <link rel="stylesheet" href="contato.css">
-  <link rel="stylesheet" href="depoimentos.css">
-  <link rel="stylesheet" href="home.css">
-  <link rel="stylesheet" href="localizacao.css">
-  <link rel="stylesheet" href="nav.css">
-  <link rel="stylesheet" href="sobre.css">
-  <link rel="stylesheet" href="whatsapp.css">
+  <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="css/busca-imoveis.css">
+  <link rel="stylesheet" href="css/contato.css">
+  <link rel="stylesheet" href="css/depoimentos.css">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/localizacao.css">
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/sobre.css">
+  <link rel="stylesheet" href="css/whatsapp.css">
 </head>  
 <body>
 
@@ -303,11 +304,12 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp">
   </a>
 
-  <script src="contato.js"></script>
-  <script src="depoimentos.js"></script>
-  <script src="home.js"></script>
-  <script src="nav.js"></script>
-  <script src="sobre.js"></script>
-  <script src="whatsapp.js"></script>
+  <script src="js/busca-imoveis.js"></script>
+  <script src="js/contato.js"></script>
+  <script src="js/depoimentos.js"></script>
+  <script src="js/home.js"></script>
+  <script src="js/nav.js"></script>
+  <script src="js/sobre.js"></script>
+  <script src="js/whatsapp.js"></script>
 </body>
 </html>
