--- a/index.html
+++ b/index.html
@@ -73,6 +73,63 @@
     </div>
   </section> 
 
+  <!-- Seção Imóveis em Destaque Especiais -->
+  <section id="imoveis" class="imoveis-destaque-especiais">
+    <div class="container">
+      <h2>Imóveis em Destaque</h2>
+      
+      <div class="destaque-grid">
+        <div class="destaque-item">
+          <div class="destaque-image">
+            <img src="https://remax.azureedge.net/userimages/69/LargeWM/L_1ed8c4ea-e8e0-44e0-9621-2c249a870fa8.jpg" alt="Casa de Condomínio - Rua Lantana" loading="lazy">
+            <div class="destaque-tag">Casa de Condomínio</div>
+          </div>
+          <div class="destaque-content">
+            <h3>Casa de Condomínio - Rua Lantana</h3>
+            <p class="destaque-location">115 Rua Lantana, Atibaia - SP</p>
+            <p class="destaque-price">R$ 2.689.900</p>
+            <p class="destaque-description">Excelente casa de condomínio em localização privilegiada, com área de lazer completa e segurança 24h.</p>
+            <div class="destaque-features">
+              <span><i class="fas fa-bed"></i> 4 quartos</span>
+              <span><i class="fas fa-bath"></i> 2 banheiros</span>
+              <span><i class="fas fa-car"></i> 3 vagas</span>
+            </div>
+            <div class="destaque-actions">
+              <a href="https://www.remax.com.br/pt-br/imoveis/casa-de-condominio/venda/atibaia/115-rua-lantana/690471003-104" target="_blank" class="btn-destaque">Ver Detalhes</a>
+              <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Olá, tenho interesse no imóvel da Rua Lantana" target="_blank" class="btn-whatsapp">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="destaque-item">
+          <div class="destaque-image">
+            <img src="https://remax.azureedge.net/userimages/69/LargeWM/L_2404abbf-39e2-447c-a557-56309530ce3e.jpg" alt="Casa de Condomínio - Bom Jesus dos Perdões" loading="lazy">
+            <div class="destaque-tag">Casa de Condomínio</div>
+          </div>
+          <div class="destaque-content">
+            <h3>Casa de Condomínio - Bom Jesus dos Perdões</h3>
+            <p class="destaque-location">Bom Jesus dos Perdões - SP</p>
+            <p class="destaque-price">R$ 995.000</p>
+            <p class="destaque-description">Casa moderna em condomínio fechado, com acabamento de primeira qualidade e área verde preservada.</p>
+            <div class="destaque-features">
+              <span><i class="fas fa-bed"></i> 1 quarto</span>
+              <span><i class="fas fa-bath"></i> 1 banheiro</span>
+              <span><i class="fas fa-home"></i> 190m²</span>
+            </div>
+            <div class="destaque-actions">
+              <a href="https://www.remax.com.br/pt-br/imoveis/casa-de-condominio/venda/bom-jesus-dos-perdoes/80-rua-acacio-felix-da-costa/690471003-94" target="_blank" class="btn-destaque">Ver Detalhes</a>
+              <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Olá, tenho interesse no imóvel de Bom Jesus dos Perdões" target="_blank" class="btn-whatsapp">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Seção Busca e Filtros de Imóveis -->
   <section id="busca-imoveis" class="busca-imoveis">
     <div class="container">
@@ -203,62 +260,6 @@
     </div>
   </section>
 
-  <!-- Seção Imóveis em Destaque Especiais -->
-  <section class="imoveis-destaque-especiais">
-    <div class="container">
-      <h2>Imóveis em Destaque</h2>
-      
-      <div class="destaque-grid">
-        <div class="destaque-item">
-          <div class="destaque-image">
-            <img src="https://remax.azureedge.net/userimages/69/LargeWM/L_1ed8c4ea-e8e0-44e0-9621-2c249a870fa8.jpg" alt="Casa de Condomínio - Rua Lantana" loading="lazy">
-            <div class="destaque-tag">Casa de Condomínio</div>
-          </div>
-          <div class="destaque-content">
-            <h3>Casa de Condomínio - Rua Lantana</h3>
-            <p class="destaque-location">115 Rua Lantana, Atibaia - SP</p>
-            <p class="destaque-price">R$ 2.689.900</p>
-            <p class="destaque-description">Excelente casa de condomínio em localização privilegiada, com área de lazer completa e segurança 24h.</p>
-            <div class="destaque-features">
-              <span><i class="fas fa-bed"></i> 4 quartos</span>
-              <span><i class="fas fa-bath"></i> 2 banheiros</span>
-              <span><i class="fas fa-car"></i> 3 vagas</span>
-            </div>
-            <div class="destaque-actions">
-              <a href="https://www.remax.com.br/pt-br/imoveis/casa-de-condominio/venda/atibaia/115-rua-lantana/690471003-104" target="_blank" class="btn-destaque">Ver Detalhes</a>
-              <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Olá, tenho interesse no imóvel da Rua Lantana" target="_blank" class="btn-whatsapp">
-                <i class="fab fa-whatsapp"></i> WhatsApp
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="destaque-item">
-          <div class="destaque-image">
-            <img src="https://remax.azureedge.net/userimages/69/LargeWM/L_2404abbf-39e2-447c-a557-56309530ce3e.jpg" alt="Casa de Condomínio - Bom Jesus dos Perdões" loading="lazy">
-            <div class="destaque-tag">Casa de Condomínio</div>
-          </div>
-          <div class="destaque-content">
-            <h3>Casa de Condomínio - Bom Jesus dos Perdões</h3>
-            <p class="destaque-location">Bom Jesus dos Perdões - SP</p>
-            <p class="destaque-price">R$ 995.000</p>
-            <p class="destaque-description">Casa moderna em condomínio fechado, com acabamento de primeira qualidade e área verde preservada.</p>
-            <div class="destaque-features">
-              <span><i class="fas fa-bed"></i> 1 quarto</span>
-              <span><i class="fas fa-bath"></i> 1 banheiro</span>
-              <span><i class="fas fa-home"></i> 190m²</span>
-            </div>
-            <div class="destaque-actions">
-              <a href="https://www.remax.com.br/pt-br/imoveis/casa-de-condominio/venda/bom-jesus-dos-perdoes/534-rua-jatoba/690471058-47" target="_blank" class="btn-destaque">Ver Detalhes</a>
-              <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Olá, tenho interesse no imóvel de Bom Jesus dos Perdões" target="_blank" class="btn-whatsapp">
-                <i class="fab fa-whatsapp"></i> WhatsApp
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Seção Imóveis em Destaque -->
   <!--section id="imoveis" class="imoveis-destaque">
@@ -493,7 +494,7 @@
       </div>
 
       <!-- CTA -->
-      <a href="https://api.whatsapp.com/send?phone=551126718848&text=Ol%C3%A1,%20venho%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." 
+      <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Ol%C3%A1,%20venho%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." 
         target="_blank" class="cta-button">
         Fale com um Corretor, agora mesmo!
       </a>
@@ -573,7 +574,7 @@
           <a href="https://www.instagram.com/remaxvivaatibaia/" target="_blank">
             <img src="images/instagram.png" alt="Instagram" class="social-icon">
           </a>
-          <a href="https://wa.me/5511975673838?text=Olá,%20venho%20através%20do%20site%20e%20gostaria%20de%20mais%20informações!" target="_blank">
+          <a href="https://api.whatsapp.com/send?phone=5511975673838&text=Ol%C3%A1,%20venho%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es!" target="_blank">
             <img src="images/whatsapp.png" alt="WhatsApp" class="social-icon">
           </a>
         </div>
