Atualização das opções de cidades no HTML e remoção da popularização dinâmica no JavaScript

--- a/index.html
+++ b/index.html
@@ -219,10 +219,11 @@
           <select id="cidade" class="filtro-select">
             <option value="">Todas as cidades</option>
             <option value="Atibaia">Atibaia</option>
-            <option value="Bom Jesus dos Perdões">Bom Jesus dos Perdões</option>
-            <option value="Mairiporã">Mairiporã</option>
-            <option value="Nazaré Paulista">Nazaré Paulista</option>
-            <option value="Bueno Brandão">Bueno Brandão</option>
+            <option value="Bom Jesus Dos Perdoes">Bom Jesus dos Perdões</option>
+            <option value="Bueno Brandao">Bueno Brandão</option>
+            <option value="Indaiatuba">Indaiatuba</option>
+            <option value="Mairipora">Mairiporã</option>
+            <option value="Nazare Paulista">Nazaré Paulista</option>
           </select>
         </div>
         <div class="filtro-group">
